fix: scrollbar style

--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@
   box-sizing: border-box;
   padding: 0;
   margin: 0;
-  scrollbar-width: thin;
+  /* scrollbar-width: thin; */
 }
 
 html {
